# automate-1.1

./: .gitignore  README.md  drafted_marketing_content.txt  engagement_opportunities.json  engagement_opportunities.txt  final_content_package.json  final_content_package.txt  market_intelligence_report.json  market_intelligence_report.txt  pyproject.toml  validation_report.json  validation_report.txt
knowledge/: brand_voice_guide.json  products.json
src/ettin_entertainment_daggerheart_marketing_team/: crew.py  main.py
src/ettin_entertainment_daggerheart_marketing_team/config/: agents.yaml  tasks.yaml
src/ettin_entertainment_daggerheart_marketing_team/tools/: custom_tool.py
